--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div>
     <ul class="tab-nav">
-      <li><a href="#" data-category="music">Music</a></li>
-      <li><a href="#" data-category="sports">Sports</a></li>
-      <li><a href="#" data-category="business">Business</a></li>
-      <li><a href="#" data-category="food">Food</a></li>
-      <li><a href="#" data-category="art">Art</a></li>
+      <li><button class="category-button" data-category="music">Music</button></li>
+      <li><button class="category-button" data-category="sports">Sports</button></li>
+      <li><button class="category-button" data-category="business">Business</button></li>
+      <li><button class="category-button" data-category="food">Food</button></li>
+      <li><button class="category-button" data-category="art">Art</button></li>
     </ul>
     <div class="event-grid"></div>
   </div>
