--- a/myAccount.html
+++ b/myAccount.html
@@ -9,8 +9,11 @@
 </head>
 <body>
   <div>
+    <a href="index.html" class="back-to-events-link">
+      <img src="svg/arrow-leftcom.svg" alt="arrow left" class="arrowLeft">
+      <span>Back to Events</span>
+    </a>
     <ul class="tab-nav">
-      <li><button type="button"><img src="svg/arrow-leftcom.svg" alt="arrow left" class="arrowLeft">Back to events</button></li>
       <li><button class="category-button">Favorites</button></li>
       <li><button class="category-button">Interested</button></li>
       <li><button class="category-button">Going</button></li>
