--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <div>
+    <a href="myAccount.html" class="my-account-link">
+      <span class="my-account-text">My Account</span>
+      <img src="svg/arrowRig.svg" alt="Arrow Right" class="arrow-icon">
+    </a>
     <ul class="tab-nav">
       <li><button class="category-button" data-category="music">Music</button></li>
       <li><button class="category-button" data-category="sports">Sports</button></li>
