--- a/myAccount.html
+++ b/myAccount.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>My Account</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>My Account</title>
 </head>
 <body>
   <div>
@@ -17,11 +16,10 @@
       <li><button class="category-button">Favorites</button></li>
       <li><button class="category-button">Interested</button></li>
       <li><button class="category-button">Going</button></li>
+      <li><button id="calendar-button" class="category-button">Calendar</button></li>
     </ul>
-    <div class="event-grid"></div>
   </div>
-
-  <script type="module" src=""></script>
+  
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
